--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
         <script src="js/rbush.min.js"></script>
         <script src="js/labelgun.min.js"></script>
         <script src="js/labels.js"></script>
-        <script src="data/AngenehmeundunangenehmeStrecken_1.js"></script>
-        <script src="data/Verbesserungsvorschlge_2.js"></script>
+        <script src="data/ErgebnissederGruppenkartierung_1.js"></script>
         <script>
         var highlightLayer;
         function highlightFeature(e) {
@@ -60,96 +59,7 @@
         });
         layer_OpenStreetMap_0;
         map.addLayer(layer_OpenStreetMap_0);
-        function pop_AngenehmeundunangenehmeStrecken_1(feature, layer) {
-            layer.on({
-                mouseout: function(e) {
-                    if (typeof layer.closePopup == 'function') {
-                        layer.closePopup();
-                    } else {
-                        layer.eachLayer(function(feature){
-                            feature.closePopup()
-                        });
-                    }
-                },
-                mouseover: highlightFeature,
-            });
-            var popupContent = '<table>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['zweite'] !== null ? autolinker.link(feature.properties['zweite'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['Beschrei_1'] !== null ? autolinker.link(feature.properties['Beschrei_1'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['Zweite Z'] !== null ? autolinker.link(feature.properties['Zweite Z'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['Dritte Z'] !== null ? autolinker.link(feature.properties['Dritte Z'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['Vierte Z'] !== null ? autolinker.link(feature.properties['Vierte Z'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                </table>';
-            layer.bindPopup(popupContent, {maxHeight: 400});
-        }
-
-        function style_AngenehmeundunangenehmeStrecken_1_0(feature) {
-            switch(String(feature.properties['q2wHide_Rot-Grün_'])) {
-                case 'G':
-                    return {
-                pane: 'pane_AngenehmeundunangenehmeStrecken_1',
-                radius: 10.0,
-                opacity: 1,
-                color: 'rgba(66,155,58,1.0)',
-                dashArray: '',
-                lineCap: 'butt',
-                lineJoin: 'miter',
-                weight: 2.0,
-                fill: true,
-                fillOpacity: 1,
-                fillColor: 'rgba(66,155,58,1.0)',
-                interactive: true,
-            }
-                    break;
-                case 'R':
-                    return {
-                pane: 'pane_AngenehmeundunangenehmeStrecken_1',
-                radius: 10.0,
-                opacity: 1,
-                color: 'rgba(144,30,42,1.0)',
-                dashArray: '',
-                lineCap: 'butt',
-                lineJoin: 'miter',
-                weight: 2.0,
-                fill: true,
-                fillOpacity: 1,
-                fillColor: 'rgba(144,30,42,1.0)',
-                interactive: true,
-            }
-                    break;
-            }
-        }
-        map.createPane('pane_AngenehmeundunangenehmeStrecken_1');
-        map.getPane('pane_AngenehmeundunangenehmeStrecken_1').style.zIndex = 401;
-        map.getPane('pane_AngenehmeundunangenehmeStrecken_1').style['mix-blend-mode'] = 'normal';
-        var layer_AngenehmeundunangenehmeStrecken_1 = new L.geoJson(json_AngenehmeundunangenehmeStrecken_1, {
-            attribution: '',
-            interactive: true,
-            dataVar: 'json_AngenehmeundunangenehmeStrecken_1',
-            layerName: 'layer_AngenehmeundunangenehmeStrecken_1',
-            pane: 'pane_AngenehmeundunangenehmeStrecken_1',
-            onEachFeature: pop_AngenehmeundunangenehmeStrecken_1,
-            pointToLayer: function (feature, latlng) {
-                var context = {
-                    feature: feature,
-                    variables: {}
-                };
-                return L.circleMarker(latlng, style_AngenehmeundunangenehmeStrecken_1_0(feature));
-            },
-        });
-        bounds_group.addLayer(layer_AngenehmeundunangenehmeStrecken_1);
-        map.addLayer(layer_AngenehmeundunangenehmeStrecken_1);
-        function pop_Verbesserungsvorschlge_2(feature, layer) {
+        function pop_ErgebnissederGruppenkartierung_1(feature, layer) {
             layer.on({
                 mouseout: function(e) {
                     if (typeof layer.closePopup == 'function') {
@@ -175,46 +85,97 @@
                     <tr>\
                         <td colspan="2">' + (feature.properties['Dritte Z'] !== null ? autolinker.link(feature.properties['Dritte Z'].toLocaleString()) : '') + '</td>\
                     </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['zweite'] !== null ? autolinker.link(feature.properties['zweite'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['Beschrei_2'] !== null ? autolinker.link(feature.properties['Beschrei_2'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['Zweite Z'] !== null ? autolinker.link(feature.properties['Zweite Z'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['Dritte Z_2'] !== null ? autolinker.link(feature.properties['Dritte Z_2'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['Vierte Z'] !== null ? autolinker.link(feature.properties['Vierte Z'].toLocaleString()) : '') + '</td>\
+                    </tr>\
                 </table>';
             layer.bindPopup(popupContent, {maxHeight: 400});
         }
 
-        function style_Verbesserungsvorschlge_2_0() {
-            return {
-                pane: 'pane_Verbesserungsvorschlge_2',
+        function style_ErgebnissederGruppenkartierung_1_0(feature) {
+            switch(String(feature.properties['q2wHide_Rot-Grün_'])) {
+                case 'Angenehm':
+                    return {
+                pane: 'pane_ErgebnissederGruppenkartierung_1',
+                radius: 10.0,
+                opacity: 1,
+                color: 'rgba(66,155,58,1.0)',
+                dashArray: '',
+                lineCap: 'butt',
+                lineJoin: 'miter',
+                weight: 2.0,
+                fill: true,
+                fillOpacity: 1,
+                fillColor: 'rgba(66,155,58,1.0)',
+                interactive: true,
+            }
+                    break;
+                case 'Unangenehm':
+                    return {
+                pane: 'pane_ErgebnissederGruppenkartierung_1',
+                radius: 10.0,
+                opacity: 1,
+                color: 'rgba(144,30,42,1.0)',
+                dashArray: '',
+                lineCap: 'butt',
+                lineJoin: 'miter',
+                weight: 2.0,
+                fill: true,
+                fillOpacity: 1,
+                fillColor: 'rgba(144,30,42,1.0)',
+                interactive: true,
+            }
+                    break;
+                case 'Vorschlag':
+                    return {
+                pane: 'pane_ErgebnissederGruppenkartierung_1',
                 radius: 10.0,
                 opacity: 1,
                 color: 'rgba(242,199,57,1.0)',
                 dashArray: '',
                 lineCap: 'butt',
                 lineJoin: 'miter',
-                weight: 1,
+                weight: 2.0,
                 fill: true,
                 fillOpacity: 1,
                 fillColor: 'rgba(242,199,57,1.0)',
                 interactive: true,
             }
+                    break;
+            }
         }
-        map.createPane('pane_Verbesserungsvorschlge_2');
-        map.getPane('pane_Verbesserungsvorschlge_2').style.zIndex = 402;
-        map.getPane('pane_Verbesserungsvorschlge_2').style['mix-blend-mode'] = 'normal';
-        var layer_Verbesserungsvorschlge_2 = new L.geoJson(json_Verbesserungsvorschlge_2, {
+        map.createPane('pane_ErgebnissederGruppenkartierung_1');
+        map.getPane('pane_ErgebnissederGruppenkartierung_1').style.zIndex = 401;
+        map.getPane('pane_ErgebnissederGruppenkartierung_1').style['mix-blend-mode'] = 'normal';
+        var layer_ErgebnissederGruppenkartierung_1 = new L.geoJson(json_ErgebnissederGruppenkartierung_1, {
             attribution: '',
             interactive: true,
-            dataVar: 'json_Verbesserungsvorschlge_2',
-            layerName: 'layer_Verbesserungsvorschlge_2',
-            pane: 'pane_Verbesserungsvorschlge_2',
-            onEachFeature: pop_Verbesserungsvorschlge_2,
+            dataVar: 'json_ErgebnissederGruppenkartierung_1',
+            layerName: 'layer_ErgebnissederGruppenkartierung_1',
+            pane: 'pane_ErgebnissederGruppenkartierung_1',
+            onEachFeature: pop_ErgebnissederGruppenkartierung_1,
             pointToLayer: function (feature, latlng) {
                 var context = {
                     feature: feature,
                     variables: {}
                 };
-                return L.circleMarker(latlng, style_Verbesserungsvorschlge_2_0(feature));
+                return L.circleMarker(latlng, style_ErgebnissederGruppenkartierung_1_0(feature));
             },
         });
-        bounds_group.addLayer(layer_Verbesserungsvorschlge_2);
-        map.addLayer(layer_Verbesserungsvorschlge_2);
+        bounds_group.addLayer(layer_ErgebnissederGruppenkartierung_1);
+        map.addLayer(layer_ErgebnissederGruppenkartierung_1);
             var title = new L.Control();
             title.onAdd = function (map) {
                 this._div = L.DomUtil.create('div', 'info');
@@ -225,7 +186,7 @@
                 this._div.innerHTML = '<h2>Mobilitätssituation und Verbesserungsvorschläge im Raum Arzberg</h2>';
             };
             title.addTo(map);
-            var abstract = new L.Control({'position':'bottomleft'});
+            var abstract = new L.Control({'position':'topleft'});
             abstract.onAdd = function (map) {
                 this._div = L.DomUtil.create('div',
                 'leaflet-control abstract');
@@ -247,7 +208,7 @@
             };
             abstract.addTo(map);
         var baseMaps = {};
-        L.control.layers(baseMaps,{'<img src="legend/Verbesserungsvorschlge_2.png" /> Verbesserungsvorschläge': layer_Verbesserungsvorschlge_2,'Angenehme und unangenehme Strecken<br /><table><tr><td style="text-align: center;"><img src="legend/AngenehmeundunangenehmeStrecken_1_G0.png" /></td><td>G</td></tr><tr><td style="text-align: center;"><img src="legend/AngenehmeundunangenehmeStrecken_1_R1.png" /></td><td>R</td></tr></table>': layer_AngenehmeundunangenehmeStrecken_1,"OpenStreetMap": layer_OpenStreetMap_0,}).addTo(map);
+        L.control.layers(baseMaps,{'Ergebnisse der Gruppenkartierung<br /><table><tr><td style="text-align: center;"><img src="legend/ErgebnissederGruppenkartierung_1_AngenehmerMobilitätsaspekt0.png" /></td><td>Angenehmer Mobilitätsaspekt</td></tr><tr><td style="text-align: center;"><img src="legend/ErgebnissederGruppenkartierung_1_UnangenehmerMobilitätsaspekt1.png" /></td><td>Unangenehmer Mobilitätsaspekt</td></tr><tr><td style="text-align: center;"><img src="legend/ErgebnissederGruppenkartierung_1_Verbesserungsvorschlag2.png" /></td><td>Verbesserungsvorschlag</td></tr></table>': layer_ErgebnissederGruppenkartierung_1,"OpenStreetMap": layer_OpenStreetMap_0,},{collapsed:false}).addTo(map);
         setBounds();
         </script>
     </body>
