--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             };
             abstract.addTo(map);
         var baseMaps = {};
-        L.control.layers(baseMaps,{'Ergebnisse der Gruppenkartierung<br /><table><tr><td style="text-align: center;"><img src="legend/ErgebnissederGruppenkartierung_1_AngenehmerMobilitätsaspekt0.png" /></td><td>Angenehmer Mobilitätsaspekt</td></tr><tr><td style="text-align: center;"><img src="legend/ErgebnissederGruppenkartierung_1_UnangenehmerMobilitätsaspekt1.png" /></td><td>Unangenehmer Mobilitätsaspekt</td></tr><tr><td style="text-align: center;"><img src="legend/ErgebnissederGruppenkartierung_1_Verbesserungsvorschlag2.png" /></td><td>Verbesserungsvorschlag</td></tr></table>': layer_ErgebnissederGruppenkartierung_1,"OpenStreetMap": layer_OpenStreetMap_0,},{collapsed:false}).addTo(map);
+        L.control.layers(baseMaps,{'Ergebnisse der Gruppenkartierung<br /><table><tr><td style="text-align: center;"><img src="legend/ErgebnissederGruppenkartierung_1_AngenehmerMobilitätsaspekt0.png" /></td><td>Angenehmer Mobilitätsaspekt</td></tr><tr><td style="text-align: center;"><img src="legend/ErgebnissederGruppenkartierung_1_UnangenehmerMobilitätsaspekt1.png" /></td><td>Unangenehmer Mobilitätsaspekt</td></tr><tr><td style="text-align: center;"><img src="legend/ErgebnissederGruppenkartierung_1_Verbesserungsvorschlag2.png" /></td><td>Verbesserungsvorschlag</td></tr></table>':,},{collapsed:false}).addTo(map);
         setBounds();
         </script>
     </body>
